--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./app/index.js",
     "deploy": "gh-pages -d UI"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "gh-pages": "^6.2.0"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "gh-pages": "^6.2.0",
+    "mysql2": "^3.11.3"
   }
 }
