--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^5.21.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "gh-pages": "^6.2.0",
-    "mysql2": "^3.11.3"
+    "mysql2": "^3.11.3",
+    "prisma": "^5.21.0"
   }
 }
