--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@prisma/client": "^5.21.0",
+    "@prisma/client": "^5.22.0",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "gh-pages": "^6.2.0",
-    "mysql2": "^3.11.3",
-    "prisma": "^5.21.0"
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.11.3"
+  },
+  "devDependencies": {
+    "prisma": "^5.22.0"
   }
 }
