--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.21.1",
     "gh-pages": "^6.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.11.3"
+    "mysql2": "^3.11.3",
+    "nodemailer": "^6.9.16"
   },
   "devDependencies": {
     "prisma": "^5.22.0"
