--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "gh-pages": "^6.2.0",
+    "googleapis": "^144.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.11.3",
     "nodemailer": "^6.9.16"
   },
   "devDependencies": {
-    "prisma": "^5.22.0"
+    "jest": "^29.7.0",
+    "prisma": "^5.22.0",
+    "supertest": "^7.0.0"
   }
 }
